index.css
html {
  scroll-behavior: smooth;
}

* {
  padding: 0;
  margin: 0;
}

@font-face {
  font-family: Raleway-Black;
  src: url("assets/fonts/Raleway-Black.ttf");
}

@font-face {
  font-family: Raleway-Medium;
  src: url("assets/fonts/Raleway-Medium.ttf");
}

@font-face {
  font-family: Raleway-Regular;
  src: url("assets/fonts/Raleway-Regular.ttf");
}

@font-face {
  font-family: Raleway-SemiBold;
  src: url("assets/fonts/Raleway-SemiBold.ttf");
}

body {
  max-width: 1669px;
  margin: auto;
}

.center {
  display: flex;
  justify-content: center;
}

/* Landing Section */

nav {
  height: 70px;
}

.nav_container {
  display: flex;
  padding: 0 24px;
  justify-content: space-between;
  align-items: center;
  font-family: Raleway-SemiBold;
}

.nav_title {
  padding-left: 50px;
}

.nav_links {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  height: 20px;
  padding-right: 40px;
}

a {
  text-decoration: none;
  color: black;
}

li {
  list-style-type: none;
  text-decoration: none;
  margin: 5px 15px 5px 10px;
}

.chili {
  position: absolute;
  top: 600px;
}

.section_1 {
  display: flex;
  height: 700px;
}

.section1_left {
  width: 70%;
}

.section1_description {
  position: relative;
  top: 200px;
  left: 100px;
}

.s1_title {
  font-family: Raleway-Black;
  font-size: 50px;
  margin-bottom: 20px;
}

.s1_info {
  font-family: Raleway-Medium;
  margin-bottom: 20px;
}

.section1_right {
  background-color: green;
  width: 30%;
}

.check_menu {
  background-color: orange;
  border: 0;
  border-radius: 10px;
  height: 40px;
  width: 150px;
  font-family: Raleway-SemiBold;
  font-size: 15px;
}

.check_menu:hover,
.menu_card:hover,
.gallery_img:hover {
  transform: scale(1.03);
}

.gallery_img:hover {
  filter: brightness(150%);
}

.social_icon:hover {
  transform: scale(1.1);
}

.check_menu-text {
  display: flex;
  justify-content: center;
  align-items: center;
}

.slideshow {
  position: absolute;
  right: 280px;
  top: 150px;
}

.slideshow_img {
  height: 570px;
}

.fade {
  animation-name: fade;
  animation-duration: 2s;
}

@keyframes fade {
  from {
    opacity: 0.5;
  }
  to {
    opacity: 1;
  }
}

/* About Us */

.section_2 {
  height: 700px;
  z-index: 0;
}

.section_2_circle {
  position: absolute;
  background-color: green;
  height: 700px;
  width: 700px;
  border-radius: 700px;
  left: -300px;
  z-index: -1;
}

.section2_left_img {
  position: relative;
  object-fit: contain;
  height: 500px;
  left: 50px;
  top: 100px;
}

.section2_left {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.section2_right_container {
  position: relative;
  right: 300px;
  top: 100px;
}

.section_link {
  font-family: Raleway-Regular;
  color: rgb(240, 183, 78);
  padding-bottom: 12px;
}

.section_title {
  font-family: Raleway-SemiBold;
  padding-bottom: 12px;
}

.section_info {
  font-family: Raleway-Regular;
}

/* Menu Section */

.menu_container {
  height: 700px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu_info {
  font-size: 12px;
}

.s3_bottom {
  display: flex;
}

.menu_card {
  /* height: auto; */
  width: 380px;
  margin: 35px 10px 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  box-shadow: 5px 10px 18px #bcbcbc;
}

.menu_burger_img {
  object-fit: contain;
  width: 100%;
}

.card_desc {
  padding-bottom: 20px;
}

.card_title {
  font-family: Raleway-Regular;
  padding: 10px 0 10px 10px;
}

.card_info {
  font-family: Raleway-Medium;
  font-size: 13px;
  padding-left: 10px;
}

/* Gallery Section */

.bottom {
  margin-bottom: 10px;
}

.grid {
  height: auto;
  max-width: 1600px;
  margin-top: 10px;
  margin-bottom: 10px;
  display: grid;
  grid-template-columns: repeat(3, auto);
  grid-template-rows: repeat(2, auto);
  row-gap: 0px;
}

.gallery_container {
  margin-bottom: 0;
}

.gallery_img {
  width: 100%;
  height: 100%;
}

/* Contact Section */

.contact_container {
  height: 370px;
  margin-top: 40px;
  padding-top: 40px;
}

.contact_info {
  display: flex;
}

.contact_card {
  height: 120px;
  width: 300px;
  margin: 30px 10px 0;
  padding-top: 20px;
  border-radius: 100px;
  box-shadow: 5px 10px 18px #bcbcbc;
}

/* Footer Section */

.footer_container {
  height: 200px;
  background-color: rgb(238, 238, 238);
}

.footer_row {
  display: flex;
  justify-content: space-between;
  padding-top: 25px;
  padding-left: 80px;
  padding-right: 80px;
}

.links_footer {
  font-family: Raleway-Medium;
}

.footer_links {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  height: 20px;
  padding-right: 40px;
}

.info_icons {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
  width: 90px;
}

.facebook_icon {
  margin: 0 10px 0;
}

.info_para {
  font-family: Raleway-Medium;
  font-size: 12px;
}

.footer_line {
  height: 0.8px;
  margin-top: 20px;
  margin-bottom: 20px;
  background-color: lightgray;
}

.footer_copyright {
  margin-left: 40px;
  padding-left: 40px;
}

/* Mobile view button */

.btn__menu {
  background-color: transparent;
  font-size: 40px;
  text-align: center;
  border: none;
  display: none;
}

.menu__backdrop {
  position: absolute;
  background-color: #ffffff;
  height: 30vh;
  top: 70px;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 300ms ease;
  opacity: 0;
  visibility: hidden;
}

.menu--open .menu__backdrop {
  visibility: visible;
  opacity: 1;
}

.menu--open {
  height: 100vh;
}

.menu__links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu__list {
  padding: 32px 0;
}

.menu__link {
  font-size: 25px;
}

.btn__menu--close {
  position: absolute;
  background-color: #ffffff;
  right: 12px;
  top: -65px;
  padding: 8px;
  color: white;
}

@media (max-width: 768px) {
  .nav_links {
    padding-right: 10px;
  }

  .section1_description {
    top: 130px;
    left: 40px;
    width: 500px;
  }

  .s1_info {
    width: 350px;
  }

  .section1_right {
    width: 1000%;
  }

  .slideshow {
    right: -200px;
    top: 120px;
  }

  .slideshow_img {
    height: 500px;
  }

  .section_2_circle {
    height: 500px;
    width: 500px;
    border-radius: 500px;
    left: -300px;
    bottom: -100px;
  }

  .section2_left_img {
    height: 350px;
    left: -100px;
    top: 150px;
  }

  .section2_right_container {
    left: -70px;
    vertical-align: middle;
  }

  .section2_right_row {
    width: 300px;
  }

  .section2_info {
    line-height: 1.8;
  }

  .menu_card {
    margin: 20px 10px 0;
    width: auto;
  }

  .s3_bottom {
    width: 700px;
  }

  .grid {
    height: auto;
  }

  .contact_container {
    margin-bottom: 150px;
  }

  .contact_info {
    flex-wrap: wrap;
  }

  .contact_card {
    margin-left: 10px;
    margin-right: 10px;
  }

  .footer_container {
    height: auto;
  }

  .footer_row {
    margin-top: 20px;
    padding-top: 20px;
    padding-left: 40px;
    padding-right: 40px;
  }

  .footer_links {
    flex-direction: column;
    height: auto;
    padding-right: 40px;
    padding-left: 30px;
  }

  .footer_copyright {
    margin-left: 0;
  }
}

@media (max-width: 550px) {
  .nav_links {
    display: none;
  }

  .btn__menu {
    display: block;
  }

  .section_1 {
    height: 800px;
    justify-content: space-between;
  }

  .section1_description {
    top: 150px;
    left: 15px;
  }

  .s1_info {
    width: 280px;
  }

  .s1_title {
    font-size: 37px;
    margin-bottom: 20px;
  }

  .section1_right {
    width: 12%;
  }

  .slideshow {
    right: -210px;
    top: 120px;
  }

  .slideshow_img {
    height: 300px;
  }

  .chili {
    top: 700px;
  }

  .section_2 {
    height: 400px;
    position: relative;
    top: -120px;
  }

  .section_2_circle {
    height: 300px;
    width: 300px;
    border-radius: 300px;
    left: 350px;
    bottom: -150px;
    z-index: -1;
  }

  .section2_left {
    display: inline;
  }

  .section2_left_img {
    height: 200px;
    left: 300px;
    top: 400px;
  }

  .section2_right_container {
    left: 20px;
    top: 0px;
  }

  .section2_right_row {
    width: 240px;
  }

  .section2_info {
    line-height: 1.8;
  }

  .s3_bottom {
    flex-direction: column;
    width: 400px;
  }

  .menu_card {
    width: auto;
    height: auto;
    margin: 20px 5px 0px;
    padding-bottom: 10px;
  }

  .menu_container {
    height: 1000px;
    margin-top: 150px;
    margin-bottom: 120px;
  }

  .grid {
    height: auto;
    max-width: auto;
    margin-top: 10px;
    display: flex;
    flex-direction: column;
  }

  .contact_container {
    height: auto;
    margin-top: 40px;
    margin-bottom: 40px;
    padding-top: 40px;
  }

  .contact_info {
    display: flex;
    flex-direction: column;
  }

  .contact_card {
    width: auto;
    margin-left: 10px;
    margin-right: 10px;
  }

  .footer_container {
    height: auto;
  }

  .footer_row {
    flex-direction: column;
    height: 300px;
    padding-left: 20px;
  }

  .links_footer {
    height: auto;
  }

  .li {
    margin-left: 0;
  }

  .footer_links {
    flex-direction: column;
    line-height: 30px;
  }

  .info_para {
    font-size: 14px;
    width: 300px;
  }

  .footer_copyright {
    padding-left: 0;
    margin-left: 20px;
  }
}

